--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -2,18 +2,46 @@ version: '2'
 services:
   zookeeper:
     image: wurstmeister/zookeeper:3.4.6
+    network_mode: host
     ports:
       - "2181:2181"
   
-  kafka:
+  kafka1:
     image: wurstmeister/kafka:${KAFKA_VER}
+    network_mode: host
+    ports:
+      - "9091:9091"
+    environment:
+      KAFKA_ZOOKEEPER_CONNECT: localhost:2181
+      KAFKA_ADVERTISED_HOST_NAME: localhost
+      KAFKA_PORT: 9091
+      KAFKA_ADVERTISED_PORT: 9091
+      KAFKA_BROKER_ID: 1
+      KAFKA_LISTENERS: PLAINTEXT://:9091
+
+  kafka2:
+    image: wurstmeister/kafka:${KAFKA_VER}
+    network_mode: host
     ports:
       - "9092:9092"
-    links:
-      - zookeeper
     environment:
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper
+      KAFKA_ZOOKEEPER_CONNECT: localhost:2181
       KAFKA_ADVERTISED_HOST_NAME: localhost
+      KAFKA_PORT: 9092
       KAFKA_ADVERTISED_PORT: 9092
-      KAFKA_CREATE_TOPICS: kafka-rust-test:2:1
-      KAFKA_BROKER_ID: 0
+      KAFKA_BROKER_ID: 2
+      KAFKA_LISTENERS: PLAINTEXT://:9092
+
+  kafka3:
+    image: wurstmeister/kafka:${KAFKA_VER}
+    network_mode: host
+    ports:
+      - "9093:9093"
+    environment:
+      KAFKA_ZOOKEEPER_CONNECT: localhost:2181
+      KAFKA_ADVERTISED_HOST_NAME: localhost
+      KAFKA_PORT: 9093
+      KAFKA_ADVERTISED_PORT: 9093
+      KAFKA_BROKER_ID: 3
+      KAFKA_LISTENERS: PLAINTEXT://:9093
+      KAFKA_CREATE_TOPICS: kafka-rust-test:10:3
