--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,6 @@ version: '2'
 services:
   zookeeper:
     image: wurstmeister/zookeeper:3.4.6
-    hostname: zookeeper
     ports:
       - "2181:2181"
   
@@ -14,6 +13,7 @@ services:
       - zookeeper
     environment:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper
+      KAFKA_ADVERTISED_HOST_NAME: localhost
       KAFKA_ADVERTISED_PORT: 9092
       KAFKA_CREATE_TOPICS: kafka-rust-test:2:1
       KAFKA_BROKER_ID: 0
