--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -1,47 +1,49 @@
 version: '2'
 services:
   zookeeper:
+    hostname: zookeeper
     image: wurstmeister/zookeeper:3.4.6
-    network_mode: host
     ports:
       - "2181:2181"
   
   kafka1:
     image: wurstmeister/kafka:${KAFKA_VER}
-    network_mode: host
+    hostname: kafka1
     ports:
       - "9091:9091"
     environment:
-      KAFKA_ZOOKEEPER_CONNECT: localhost:2181
-      KAFKA_ADVERTISED_HOST_NAME: localhost
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_HOST_NAME: kafka1
       KAFKA_PORT: 9091
       KAFKA_ADVERTISED_PORT: 9091
       KAFKA_BROKER_ID: 1
-      KAFKA_LISTENERS: PLAINTEXT://:9091
+      KAFKA_LISTENERS: PLAINTEXT://kafka1:9091
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka1:9091
 
   kafka2:
     image: wurstmeister/kafka:${KAFKA_VER}
-    network_mode: host
+    hostname: kafka2
     ports:
       - "9092:9092"
     environment:
-      KAFKA_ZOOKEEPER_CONNECT: localhost:2181
-      KAFKA_ADVERTISED_HOST_NAME: localhost
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_HOST_NAME: kafka2
       KAFKA_PORT: 9092
       KAFKA_ADVERTISED_PORT: 9092
       KAFKA_BROKER_ID: 2
-      KAFKA_LISTENERS: PLAINTEXT://:9092
+      KAFKA_LISTENERS: PLAINTEXT://kafka2:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka2:9092
 
   kafka3:
     image: wurstmeister/kafka:${KAFKA_VER}
-    network_mode: host
+    hostname: kafka3
     ports:
       - "9093:9093"
     environment:
-      KAFKA_ZOOKEEPER_CONNECT: localhost:2181
-      KAFKA_ADVERTISED_HOST_NAME: localhost
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_HOST_NAME: kafka3
       KAFKA_PORT: 9093
       KAFKA_ADVERTISED_PORT: 9093
       KAFKA_BROKER_ID: 3
-      KAFKA_LISTENERS: PLAINTEXT://:9093
-      KAFKA_CREATE_TOPICS: kafka-rust-test:10:3
+      KAFKA_LISTENERS: PLAINTEXT://kafka3:9093
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka3:9093
